api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: api
    spec:
      containers:
      - env:
        - name: ALLOWED_HOSTS
          value: localhost,api
        - name: CELERY_BROKER_URL
          valueFrom:
            configMapKeyRef:
              key: CELERY_BROKER_URL
              name: backend-env
        - name: DASHBOARD_URL
          value: http://localhost:9000/
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: backend-env
        - name: DEFAULT_CHANNEL_SLUG
          valueFrom:
            configMapKeyRef:
              key: DEFAULT_CHANNEL_SLUG
              name: common-env
        - name: DEFAULT_FROM_EMAIL
          valueFrom:
            configMapKeyRef:
              key: DEFAULT_FROM_EMAIL
              name: backend-env
        - name: EMAIL_URL
          valueFrom:
            configMapKeyRef:
              key: EMAIL_URL
              name: backend-env
        - name: HTTP_IP_FILTER_ALLOW_LOOPBACK_IPS
          valueFrom:
            configMapKeyRef:
              key: HTTP_IP_FILTER_ALLOW_LOOPBACK_IPS
              name: common-env
        - name: HTTP_IP_FILTER_ENABLED
          valueFrom:
            configMapKeyRef:
              key: HTTP_IP_FILTER_ENABLED
              name: common-env
        - name: JAEGER_AGENT_HOST
          value: jaeger
        - name: SECRET_KEY
          valueFrom:
            configMapKeyRef:
              key: SECRET_KEY
              name: backend-env
        image: ghcr.io/saleor/saleor:latest
        imagePullPolicy: ""
        name: api
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: 500m
            memory: "536870912"
        stdin: true
        tty: true
        volumeMounts:
        - mountPath: /app/media
          name: saleor-media
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: saleor-media
        persistentVolumeClaim:
          claimName: saleor-media
status: {}
