dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
      - image: ghcr.io/saleor/saleor-dashboard:latest
        imagePullPolicy: ""
        name: dashboard
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 250m
            memory: "268435456"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
