db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: db
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: saleor
        - name: POSTGRES_USER
          value: saleor
        image: library/postgres:15-alpine
        imagePullPolicy: ""
        name: db
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: saleor-db
        - mountPath: /docker-entrypoint-initdb.d/replica_user.sql
          name: db-claim1
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: saleor-db
        persistentVolumeClaim:
          claimName: saleor-db
      - name: db-claim1
        persistentVolumeClaim:
          claimName: db-claim1
status: {}
