jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jaeger
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: jaeger
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: jaeger
    spec:
      containers:
      - image: jaegertracing/all-in-one
        imagePullPolicy: ""
        name: jaeger
        ports:
        - containerPort: 5775
          protocol: UDP
        - containerPort: 6831
          protocol: UDP
        - containerPort: 6832
          protocol: UDP
        - containerPort: 5778
        - containerPort: 16686
        - containerPort: 14268
        - containerPort: 9411
        resources:
          limits:
            cpu: 250m
            memory: "268435456"
        volumeMounts:
        - mountPath: /tmp
          name: jaeger-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: jaeger-claim0
        persistentVolumeClaim:
          claimName: jaeger-claim0
status: {}
