mailpit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: mailpit
  name: mailpit
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mailpit
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: mailpit
    spec:
      containers:
      - image: axllent/mailpit
        imagePullPolicy: ""
        name: mailpit
        ports:
        - containerPort: 1025
        - containerPort: 8025
        resources:
          limits:
            cpu: 250m
            memory: "268435456"
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
