worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: worker
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/saleor-backend-tier: "true"
        io.kompose.service: worker
    spec:
      containers:
      - args:
        - celery
        - -A
        - saleor
        - --app=saleor.celeryconf:app
        - worker
        - --loglevel=info
        - -B
        image: ghcr.io/saleor/saleor:latest
        imagePullPolicy: ""
        name: worker
        resources:
          limits:
            cpu: 250m
            memory: "268435456"
        volumeMounts:
        - mountPath: /app/media
          name: saleor-media
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: saleor-media
        persistentVolumeClaim:
          claimName: saleor-media
status: {}
