dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  ports:
  - name: "9002"
    port: 9002
    targetPort: 80
  selector:
    io.kompose.service: dashboard
status:
  loadBalancer: {}
